Nuke the mailing list and donate from index.html
It's the only way to be sure!

The donate buttons were still showing up on mobile.  Rather than
tracking down more css to hide them, just remove them altogether, along
with the mailing list form I'm not using.

--- a/style/main.css
+++ b/style/main.css
@@ -234,7 +234,6 @@ hr {
     display: block;
     margin-top: 29px; }
   .game-message .mailing-list {
-    display: none;
     margin-top: 52px; }
     .game-message .mailing-list strong {
       display: block;
@@ -625,11 +624,9 @@ hr {
 .sharing {
   margin-top: 20px;
   text-align: center; }
-  .sharing > iframe {
+  .sharing > iframe, .sharing > span, .sharing > form {
     display: inline-block;
     vertical-align: middle; }
-  .sharing > span, .sharing > form {
-    display: none; }
 
 @media screen and (max-width: 520px) {
   html, body {
@@ -715,7 +712,6 @@ hr {
       display: block;
       margin-top: 29px; }
     .game-message .mailing-list {
-      display: none;
       margin-top: 52px; }
       .game-message .mailing-list strong {
         display: block;
